# bbparser

./: LICENSE  README.md  requirements.txt  setup.cfg
src/bbru/: __main__.py  inducements.py  skills.py  starplayer.py  teams.py
src/dadidimerda/: __main__.py  inducements.py
