[metadata]
name = bbparser
description = Python modules for parsing various Blood Bowl related sites
long_description = file: README.md
version = attr: bbru.__version__
author = Ketil Nordstad
author_email = ketilkn@gmail.com
keywords = blood bowl, parser
license = BSD-3-Clause

[options]
package_dir =
    =src
packages = find:
install_requires =
    beautifulsoup4


[options.packages.find]
where=src
